# leap-finetune

./: .dockerignore  .gitignore  AGENTS.MD  AGENTS.md  CLAUDE.md  Dockerfile  MODAL_SUPPORT.md  PROPOSAL_one_line_install.md  README.md  TOOL_CALL_TEMPLATE_CLEANUP.md  config.py  notes.txt  plan.md  pyproject.toml
.agents/skills/lft-checkpoints/: SKILL.md
.agents/skills/lft-data/: SKILL.md
.agents/skills/lft-evals/: SKILL.md
.agents/skills/lft-launch/: SKILL.md
.agents/skills/lft-rewards/: SKILL.md
.agents/skills/lft-training/: SKILL.md
cookbook/satellite-vlm/: README.md  prepare_vrsbench.py
cookbook/visual-grounding/: README.md  fix_test_hint.py  prepare_data.py  prepare_evals.py  prompt_templates.py
cookbook/visual-grounding/configs/: fix_test_hint.sh  grpo_grounding.sh  grpo_grounding.yaml  grpo_grounding_multinode.sh  prepare_data.sh  prepare_evals.sh  sft_grounding.sh  sft_grounding.yaml  sft_grounding_multinode.sh
examples/kuberay/: job.attach-to-raycluster.yaml  raycluster.gpu-workers.yaml  rayjob.long-context-cp2-64k.yaml
job_configs/: dpo_example.yaml  eval_standalone_example.yaml  grpo_example.yaml  grpo_openenv_example.yaml  grpo_server_mode_example.yaml  long_context_moe_sft_example.yaml  moe_dpo_example.yaml  moe_ep_sft_example.yaml  moe_large_dpo_example.yaml  moe_large_sft_example.yaml  moe_sft_example.yaml  sft_example.yaml  sft_example_kuberay.yaml  sft_example_modal.yaml  sft_example_with_slurm.yaml  sft_with_async_eval_example.yaml  sft_with_lora_example.yaml  vlm_dpo_example.yaml  vlm_grpo_grounding_example.yaml  vlm_sft_example.yaml
job_configs/chat_templates/: lfm25_tool_call_chat_template.jinja  lfm2_24b_tool_call_chat_template.jinja  lfm2_5_chat_template.jinja  lfm2_tool_call_chat_template.jinja
job_configs/slurms/: grpo_example.sh  vlm_grpo_grounding_example.sh
job_configs/slurms/utils/: slurm_ray.sh
job_configs/templates/: lfm2_24b_tool_call_chat_template.jinja
job_datasets/: dataset_definitions.py
rewards/: README.md  accuracy.py  grounding_format.py  grounding_iou.py  json_schema.py  judge_llm.py  length.py  regex_match.py  think_format.py  vlm_grounding.py
rewards/tasks/: README.md  __init__.py
rewards/tasks/gsm8k/: __init__.py  recipe.py
rewards/tasks/ifeval/: __init__.py  recipe.py
rewards/tasks/mcqa/: __init__.py  recipe.py
rewards/tasks/vlm_grounding/: __init__.py  recipe.py
src/leap_finetune/: __init__.py  cli.py  trainer.py
src/leap_finetune/backends/: __init__.py  kuberay_backend.py  modal_backend.py
src/leap_finetune/callbacks/: __init__.py  weave_evaluation_callback.py
src/leap_finetune/checkpointing/: __init__.py  callback.py  hf_export.py  manual_sharded.py  model_info.py  model_loading.py  paths.py
src/leap_finetune/cli/: __init__.py  export_gguf.py  export_manual_sharded_checkpoint.py  main.py
src/leap_finetune/config/: __init__.py  job_config.py  parser.py
src/leap_finetune/configs/: __init__.py  dpo_configs.py  job_config.py  peft_configs.py  sft_configs.py  vlm_sft_config.py
src/leap_finetune/data_loaders/: __init__.py  dataset_loader.py  preprocess_fns.py  ray_data_utils.py  sampling.py  tokenize_data.py  tool_call_utils.py  validate_loader.py  validate_tool_calls.py  weave_preprocessing.py
src/leap_finetune/data_loading/: __init__.py  dataset_loader.py  image_loader.py  length_grouping.py  ray_data_utils.py  tokenize_data.py  validate_dataset_format.py  validate_tool_format.py
src/leap_finetune/distribution/: __init__.py  data_sharding.py  distributed_configs.py  rank_groups.py  ray_runtime.py  ray_trainer.py  vllm_server.py
src/leap_finetune/evaluation/: README.md  __init__.py  async_eval_config.py  async_runner_main.py  backend.py  base.py  benchmark_callback.py  callback.py  data_loaders.py  llm_benchmarks.py  llm_config.py  metrics.py  reserved_callback.py  runner.py  sbatch_template.py  sidecar_callback.py  vlm_benchmarks.py  vlm_config.py
src/leap_finetune/models/: __init__.py  unsloth_lora_lfm2.py
src/leap_finetune/quantization/: gguf_export.py
src/leap_finetune/rewards/: __init__.py  loader.py  recipe.py
src/leap_finetune/rl/: __init__.py  judge.py
src/leap_finetune/rl_envs/: README.md  __init__.py  adapter.py  env_reward.py
src/leap_finetune/training/: __init__.py  dpo.py  grpo.py  moe_dpo.py  moe_sft.py  sft.py  vlm_dpo.py  (+2 more)
tests/: README.md  conftest.py  grpo_config_tests_sbatch.sh  grpo_e2e_sbatch.sh  test_async_eval.py  test_checkpoint_callback.py  test_config_parser.py  test_config_parsing.py  test_config_pipeline.py  test_context_parallel.py  test_data.py  test_dense_e2e.py  test_eval.py  test_gguf_export.py  test_grounding_metric_reward_parity.py  test_grounding_metrics.py  test_grpo_config.py  test_grpo_data.py  test_grpo_e2e.py  test_hf_export_metadata.py  test_integration.py  test_judge_llm.py  test_kuberay_backend.py  test_lfm2_24b_chat_template.py  test_lfm_chat_templates.py  test_load_models.py  test_moe_e2e.py  test_moe_ep_runtime.py  test_moe_losses.py  test_moe_trainers.py  test_parallel_topology.py  test_peft_overrides.py  test_ray_cluster_support.py  test_ray_data_utils.py  test_rewards_loader.py  test_rl_env_adapter.py  test_sft_loss_masks.py  test_tool_call_templates.py  test_tool_call_validation.py  test_trainer_mixins.py  (+6 more)
tests/checkpoint_validation/: validate_hf_checkpoint.py
tests/config/: test_config_parsing.py  test_rl_config.py
tests/distribution/: test_vllm_server.py
tests/e2e/: test_dense_e2e.py  test_grpo_e2e.py  test_vlm_e2e.py  test_vlm_grpo_e2e.py
tests/evaluation/: test_async_eval.py  test_grounding_metrics.py
tests/fixtures/: e2e_dpo_full.yaml  e2e_dpo_lora.yaml  e2e_grpo.yaml  e2e_moe_sft_full.yaml  e2e_moe_sft_lora.yaml  e2e_vlm_full.yaml  e2e_vlm_grpo.yaml  e2e_vlm_lora.yaml  tiny_qa_bench.jsonl  toy_async_eval_reserved.sh  toy_async_eval_sidecar.sh  toy_async_eval_sidecar.yaml
tests/moe/: test_moe_ep_runtime.py  test_moe_losses.py  test_rank_groups.py
tests/rl/: test_grpo_data.py  test_judge_llm.py  test_rewards_loader.py  test_rl_env_adapter.py  test_vllm_server.py
tests/slurm/: submit_e2e_tests.sh
(+111 files in other folders)
