[project]
name = "leap-finetune"
version = "0.1.0"
description = "A minimal fine-tuning repo for LFM2, fully built on Open Source."
readme = "README.md"
authors = [
    { name = "Liquid AI", email = "support@liquid.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "peft>=0.15.2",
    "deepspeed>=0.17.1; sys_platform == 'linux'",
    "torch>=2.7.1",
    "transformers>=5.3.0,<5.4.0",
    "flash-attn>=2.8.0; sys_platform == 'linux'",
    "numpy>=2.4.1",
    "trl>=1.0,<2.0",
    "rich>=14.1.0",
    "pillow>=11.3.0",
    "mpi4py>=4.1.0; sys_platform == 'linux'",
    "liger-kernel>=0.6.2; sys_platform == 'linux'",
    "wandb>=0.22.3",
    "ray==2.48.0",
    "pyyaml>=6.0",
    "turm>=0.13.0; sys_platform == 'linux'",
    "torchvision>=0.24.1",
    "modal>=0.73",
    "trackio>=0.3",
]

[project.optional-dependencies]
# OpenEnv RL environments — only needed if you use rl_env in your config.
# Install with: uv sync --extra rl-env
rl-env = [
    "openenv-core>=0.1; sys_platform == 'linux'",
]

[project.scripts]
leap-finetune = "leap_finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "configs: config parsing, validation, override, filtering (no GPU)",
    "data: dataset loading, tokenization, sharding validation",
    "dense: dense model end-to-end training tests",
    "vlm: VLM end-to-end training tests",
    "moe: MoE end-to-end training tests",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0",
    "ruff>=0.11.13",
]
