[project]
name = "leap-finetune"
version = "0.1.0"
description = "A minimal fine-tuning repo for LFM2, fully built on Open Source."
readme = "README.md"
authors = [
    { name = "Liquid AI", email = "support@liquid.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "peft>=0.15.2",
    "deepspeed>=0.17.1; sys_platform == 'linux'",
    "torch>=2.7.1",
    "transformers>=5.3.0,<5.4.0",
    "numpy>=2.4.1",
    "trl>=1.0,<2.0",
    "rich>=14.1.0",
    "pillow>=11.3.0",
    "mpi4py>=4.1.0; sys_platform == 'linux'",
    "wandb>=0.22.3",
    "ray==2.48.0",
    "pyyaml>=6.0",
    "turm>=0.13.0; sys_platform == 'linux'",
    "torchvision>=0.24.1",
    "modal>=0.73",
    "trackio>=0.3",
]

[project.optional-dependencies]
# OpenEnv RL environments — only needed if you use rl_env in your config.
# Install with: uv sync --extra rl-env
rl-env = [
    "openenv-core>=0.1; sys_platform == 'linux'",
]

[project.scripts]
leap-finetune = "leap_finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# flash-attn uses a legacy setup.py build that imports torch and setuptools.
# Disable build isolation so it builds against the runtime torch ABI selected
# for vLLM/Transformers.
no-build-isolation-package = ["flash-attn"]
default-groups = ["dev", "cuda"]
environments = [
    "python_version == '3.12' and sys_platform == 'darwin'",
    "python_version == '3.12' and sys_platform == 'linux'",
]
# CUDA is the default GPU stack. ROCm pulls vLLM and its torch stack from a different index,
# so it must be selected explicitly instead of the default cuda group:
#   uv sync --no-group cuda --group rocm
conflicts = [
    [{ group = "cuda" }, { group = "rocm" }],
]

# vLLM 0.19.0 still declares transformers<5, but LFM models require
# Transformers 5.3.x. The override is intentional and covered by the GRPO
# smoke fixtures, which leave use_vllm enabled to match shipped defaults.
override-dependencies = [
    # vllm 0.19.x declares transformers<5; override so it resolves with 5.3+
    "transformers>=5.3.0,<5.4.0",
    "huggingface_hub>=1.0",
    "numpy<2.5",
]

[[tool.uv.index]]
name = "vllm-rocm"
url = "https://wheels.vllm.ai/rocm/"
explicit = true

[tool.uv.sources]
amd-aiter = [
    { index = "vllm-rocm", group = "rocm" },
]
amdsmi = [
    { index = "vllm-rocm", group = "rocm" },
]
"flash-attn" = [
    { index = "vllm-rocm", group = "rocm" },
]
torch = [
    { index = "vllm-rocm", group = "rocm" },
]
torchaudio = [
    { index = "vllm-rocm", group = "rocm" },
]
torchvision = [
    { index = "vllm-rocm", group = "rocm" },
]
triton = [
    { index = "vllm-rocm", group = "rocm" },
]
"triton-kernels" = [
    { index = "vllm-rocm", group = "rocm" },
]
vllm = [
    { index = "vllm-rocm", group = "rocm" },
]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.8.3"
requires-dist = ["torch", "einops", "ninja", "packaging", "setuptools", "wheel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "configs: config parsing, validation, override, filtering (no GPU)",
    "data: dataset loading, tokenization, sharding validation",
    "dense: dense model end-to-end training tests",
    "vlm: VLM end-to-end training tests",
    "moe: MoE end-to-end training tests",
]
addopts = "-v --tb=short"

[dependency-groups]
cuda = [
    "flash-attn>=2.8.0; sys_platform == 'linux'",
    "liger-kernel>=0.6.2; sys_platform == 'linux'",
    # Keep CUDA vLLM pinned to the Transformers 5 / LFM stack that has
    # been validated. Floating can pull a different Torch/CUDA ABI and
    # break flash-attn at model load time.
    "vllm==0.19.0; sys_platform == 'linux'",
]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0",
    "ruff>=0.11.13",
]
rocm = [
    # Keep these direct so uv 0.6.x can apply the group-scoped vLLM ROCm index.
    "amd-aiter==0.1.13; sys_platform == 'linux'",
    "amdsmi==26.2.2; sys_platform == 'linux'",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "torch>=2.7.1; sys_platform == 'linux'",
    "torchaudio==2.9.0+eaa9e4e; sys_platform == 'linux'",
    "torchvision>=0.24.1; sys_platform == 'linux'",
    "triton==3.6.0; sys_platform == 'linux'",
    "triton-kernels==1.0.0; sys_platform == 'linux'",
    "liger-kernel>=0.6.2; sys_platform == 'linux'",
    "vllm==0.21.0+rocm722; sys_platform == 'linux'",
]
